--- a/node-runtime/package.json
+++ b/node-runtime/package.json
@@ -21,6 +21,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
+    "nodemon": "^3.1.9",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
