--- a/node-runtime/package.json
+++ b/node-runtime/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "http-proxy-middleware": "^3.0.3",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
